--- a/views/authentication.pug
+++ b/views/authentication.pug
@@ -75,10 +75,10 @@ else
               <input type="password" placeholder="Enter your password" name="password_field">
             </div>
             <div class="check">
-                <input type="radio" id="doctor" name="user_type") value="doctor">
-                <label for="doctor">Sign in As Doctor</label><br>
                 <input type="radio" id="member" name="user_type" value="user" checked>
-                <label for="member">Sign in As Member</label><br>
+                <label for="member">Sign Up as a User</label><br>
+                <input type="radio" id="doctor" name="user_type") value="doctor">
+                <label for="doctor">Sign Up as a Doctor</label><br>
                 </div>
             <div class="button input-box">
               <input type="submit" value="Sign Up" name='auth'>
