--- a/views/home.pug
+++ b/views/home.pug
@@ -5,7 +5,7 @@ head
     title ICU Soon 
     meta(charset="utf-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    link(rel="stylesheet" href="home.css")
+    link(rel="stylesheet" href="/home.css")
     link(href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Righteous&display=swap" rel="stylesheet")
     link(href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Merienda:wght@700&family=Righteous&display=swap"
         rel="stylesheet")
@@ -13,7 +13,7 @@ head
     link(href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet")
     link(rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css")
     script(src="https://kit.fontawesome.com/a076d05399.js")
-    link(rel="stylesheet" href="homecss")
+    link(rel="stylesheet" href="/home.css")
 
 body 
     //- nav
@@ -46,7 +46,7 @@ body
     <section class="s1">
         .s1_box-1
             <h1>We care as we cure</h1><br>
-            <p>Providing medical assistant in few clicks. Connected to 3000+ top doctors from all over the World. <em>Ready to treat. Ready to cure.</em> <br><br>
+            <p>Providng medical assistant in few clicks, connected to 3000+ top doctors from all over the World. <em>Ready to treat. Ready to cure.</em> <br><br>
             </p>
             <div class="s1_link">
                 <li><a href="/quicksupport">&nbsp;&nbsp;&nbsp;&nbsp;Quick support&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </a></li>
