--- a/views/quick_support.pug
+++ b/views/quick_support.pug
@@ -93,7 +93,7 @@
             <div class="s2_img">
                 <img src="pimg/qsbox2.jpg" alt="">
             </div>
-            <a href="Adv.html">
+            <a href="/quicksupport/advisory">
                 <div class="s2_box">
                     <h1>High Fever</h1>
                     <h3>Advised by: Dr. Hemant bajaj</h3>
