--- a/views/appointment.pug
+++ b/views/appointment.pug
@@ -32,34 +32,34 @@
     //-         <img src="pimg/logopro.png" alt="ICU soon">
     //-     </div>
 
-    nav
-        input(type="checkbox" id="check")
-        label(for="check" class="checkbtn")
-            i(class="fas fa-bars")
-        ul 
-            li 
-                if(!isValidated)
-                    a(class="active" href="/") Home
-                -else{
-                    -const url = "user/" + _id;
-                    a(class="active" href=url) Profile
-                -}
-            li 
-                a(href="#") Services & Conditions
-            li 
-                a(href="#" class="em") Notifications  
-            li 
-                a(href="#") Contact Us 
-            li 
-                if(!isValidated)
-                    a(href="authenticate" class="signin") Sign up/Log in
-                else 
-                    a(href="authenticate/logout" class="signin") Logout
-        div(class="logo")
-            a(href="/") 
-                img(src="/pimg/logopro.png" alt="ICU soon")
+    //- nav
+    //-     input(type="checkbox" id="check")
+    //-     label(for="check" class="checkbtn")
+    //-         i(class="fas fa-bars")
+    //-     ul 
+    //-         li 
+    //-             if(!isValidated)
+    //-                 a(class="active" href="/") Home
+    //-             -else{
+    //-                 -const url = "user/" + _id;
+    //-                 a(class="active" href=url) Profile
+    //-             -}
+    //-         li 
+    //-             a(href="/services") Services & Conditions
+    //-         li 
+    //-             a(href="#" class="em") Notifications  
+    //-         li 
+    //-             a(href="#") Contact Us 
+    //-         li 
+    //-             if(!isValidated)
+    //-                 a(href="authenticate" class="signin") Sign up/Log in
+    //-             else 
+    //-                 a(href="authenticate/logout" class="signin") Logout
+    //-     div(class="logo")
+    //-         a(href="/") 
+    //-             img(src="/pimg/logopro.png" alt="ICU soon")
 
-    //- include navigation.pug
+    include navigation.pug
     
     <section class="s1">
         <div class="s1_box">
