--- a/views/profile_user.pug
+++ b/views/profile_user.pug
@@ -36,32 +36,34 @@
     //-     </div>
 
     //- </nav>
-    nav
-        input(type="checkbox" id="check")
-        label(for="check" class="checkbtn")
-            i(class="fas fa-bars")
-        ul 
-            li 
-                if(!isValidated)
-                    a(class="active" href="home") Home
-                -else{
-                    -const url = "user/" + _id;
-                    a(class="active" href="") Profile
-                -}
-            li 
-                a(href="#") Services & Conditions
-            li 
-                a(href="#" class="em") Notifications  
-            li 
-                a(href="#") Contact Us 
-            li 
-                if(!isValidated)
-                    a(href="authenticate" class="signin") Sign up/Log in
-                else 
-                    a(href="/authenticate/logout" class="signin") Logout
-        div(class="logo")
-            a(href="/") 
-                img(src="/pimg/logopro.png" alt="ICU soon")
+    //- nav
+    //-     input(type="checkbox" id="check")
+    //-     label(for="check" class="checkbtn")
+    //-         i(class="fas fa-bars")
+    //-     ul 
+    //-         li 
+    //-             if(!isValidated)
+    //-                 a(class="active" href="home") Home
+    //-             -else{
+    //-                 -const url = "user/" + _id;
+    //-                 a(class="active" href="") Profile
+    //-             -}
+    //-         li 
+    //-             a(href="#") Services & Conditions
+    //-         li 
+    //-             a(href="#" class="em") Notifications  
+    //-         li 
+    //-             a(href="#") Contact Us 
+    //-         li 
+    //-             if(!isValidated)
+    //-                 a(href="authenticate" class="signin") Sign up/Log in
+    //-             else 
+    //-                 a(href="/authenticate/logout" class="signin") Logout
+    //-     div(class="logo")
+    //-         a(href="/") 
+    //-             img(src="/pimg/logopro.png" alt="ICU soon")
+
+    include navigation.pug
 
     <div class="wrapper">
         <div class="left">
@@ -143,7 +145,8 @@
                             -for(let i=0; i<results.length; i++){
                                 if (results[i].status == 2)
                                     p
-                                        <p><a href="#">Click Here</a></p>
+                                        p
+                                            a(href=`/user/${result.registration_id}/more/?doctor_id=${results[i].registration_id}&status=${results[i].status}`) Click Here
                             -}
                         </div>
                     </div>
@@ -171,7 +174,7 @@
                             -for(let i=0; i<results.length; i++){
                                 if (results[i].status == 1)
                                     p
-                                        a(href="#") Click Here
+                                        a(href=`/user/${result.registration_id}/more/?doctor_id=${results[i].registration_id}&status=${results[i].status}`) Click Here
                             -}
                         </div>
                     </div>
