--- a/views/home.pug
+++ b/views/home.pug
@@ -55,7 +55,7 @@ body
     </section>
 
     <section class="s2">
-        <h1 class="s2h" data-aos="fade-top">&#9830;&nbsp;WE GAVE UP LIFE, TO LEARN HOW TO SAVE OTHERS</h1>
+        <h1 class="s2h" data-aos="fade-top">&#9830;&nbsp;WE GAVE UP OUR LIVES TO LEARN HOW TO SAVE OTHERS &#9830;&nbsp;</h1>
         <div class="services">
             <div class="box" data-aos="fade-right">
                 <img src="pimg/doc2.jpg" alt="">
@@ -100,8 +100,7 @@ body
             </div>
             <div class="box3" data-aos="fade-left">
                 <p class="center">Member since 2018, Such a great facilities, best care with least economic charges when
-                    compared to other.Very well experienced doctors, no biase and it Feels like a good treatment at home. I highly
-                    recommend their assistant</p>
+                    compared to other.Very well experienced doctors, no biase and it Feels like a good treatment at home. I highly recommend their assistant</p>
                 <div class="dp-left">
                     <h1>Allena lio</h1>
                     <img src="pimg/s3face2.jpeg" alt="">
